--- a/tox.ini
+++ b/tox.ini
@@ -196,9 +196,7 @@ commands_pre =
   py3{5,6,7,8}: python -m pip install -U pip setuptools wheel
 ; Install common packages for all the tests. These are not needed in all the
 ; cases but it saves a lot of boilerplate in this file.
-  test: pip install {toxinidir}/opentelemetry-python-core/opentelemetry-api {toxinidir}/opentelemetry-python-core/opentelemetry-sdk {toxinidir}/opentelemetry-python-core/tests/util
-
-  test: pip install {toxinidir}/opentelemetry-python-core/opentelemetry-instrumentation
+  test: pip install {toxinidir}/opentelemetry-python-core/opentelemetry-api {toxinidir}/opentelemetry-python-core/opentelemetry-instrumentation {toxinidir}/opentelemetry-python-core/opentelemetry-sdk {toxinidir}/opentelemetry-python-core/tests/util
 
   celery: pip install {toxinidir}/instrumentation/opentelemetry-instrumentation-celery[test]
 
@@ -289,9 +287,9 @@ deps =
 
 commands_pre =
   python -m pip install {toxinidir}/opentelemetry-python-core/opentelemetry-api
+  python -m pip install {toxinidir}/opentelemetry-python-core/opentelemetry-instrumentation
   python -m pip install {toxinidir}/opentelemetry-python-core/opentelemetry-sdk
   python -m pip install {toxinidir}/opentelemetry-python-core/tests/util
-  python -m pip install {toxinidir}/opentelemetry-python-core/opentelemetry-instrumentation
   python -m pip install -e {toxinidir}/instrumentation/opentelemetry-instrumentation-wsgi[test]
   python -m pip install -e {toxinidir}/instrumentation/opentelemetry-instrumentation-dbapi[test]
   python -m pip install -e {toxinidir}/instrumentation/opentelemetry-instrumentation-asgi[test]
