--- a/instrumentation/opentelemetry-instrumentation-celery/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-celery/setup.cfg
@@ -39,7 +39,7 @@ package_dir=
 packages=find_namespace:
 install_requires =
     celery >= 4.0, < 6.0
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
     opentelemetry-instrumentation == 0.19b0
 
 [options.extras_require]
