--- a/instrumentation/opentelemetry-instrumentation-flask/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-flask/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     opentelemetry-util-http == 0.19b0
     opentelemetry-instrumentation == 0.19b0
     opentelemetry-instrumentation-wsgi == 0.19b0
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
 
 [options.extras_require]
 test =
