--- a/instrumentation/opentelemetry-instrumentation-grpc/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-grpc/setup.cfg
@@ -38,8 +38,8 @@ package_dir=
     =src
 packages=find_namespace:
 install_requires =
-    opentelemetry-api == 1.0.0
-    opentelemetry-sdk == 1.0.0
+    opentelemetry-api == 1.10a0
+    opentelemetry-sdk == 1.10a0
     opentelemetry-instrumentation == 0.19b0
     grpcio ~= 1.27
     wrapt >= 1.0.0, < 2.0.0
@@ -47,7 +47,7 @@ install_requires =
 [options.extras_require]
 test =
     opentelemetry-test == 0.19b0
-    opentelemetry-sdk == 1.0.0
+    opentelemetry-sdk == 1.10a0
     protobuf >= 3.13.0
 
 [options.packages.find]
