--- a/instrumentation/opentelemetry-instrumentation-pyramid/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-pyramid/setup.cfg
@@ -40,7 +40,7 @@ packages=find_namespace:
 install_requires =
     pyramid >= 1.7
     opentelemetry-instrumentation == 0.19b0
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
     opentelemetry-instrumentation-wsgi == 0.19b0
     opentelemetry-util-http == 0.19b0
     wrapt >= 1.0.0, < 2.0.0
