--- a/instrumentation/opentelemetry-instrumentation-requests/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-requests/setup.cfg
@@ -38,7 +38,7 @@ package_dir=
     =src
 packages=find_namespace:
 install_requires =
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
     opentelemetry-instrumentation == 0.19b0
     requests ~= 2.0
 
