--- a/instrumentation/opentelemetry-instrumentation-tornado/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-tornado/setup.cfg
@@ -39,7 +39,7 @@ packages=find_namespace:
 install_requires =
     tornado >= 6.0
     opentelemetry-instrumentation == 0.19b0
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
     opentelemetry-util-http == 0.19b0
 
 [options.extras_require]
