--- a/sdk-extension/opentelemetry-sdk-extension-aws/setup.cfg
+++ b/sdk-extension/opentelemetry-sdk-extension-aws/setup.cfg
@@ -38,7 +38,7 @@ package_dir=
     =src
 packages=find_namespace:
 install_requires =
-    opentelemetry-api == 1.0.0
+    opentelemetry-api == 1.10a0
 
 [options.entry_points]
 opentelemetry_propagator =
