--- a/instrumentation/opentelemetry-instrumentation-system-metrics/setup.cfg
+++ b/instrumentation/opentelemetry-instrumentation-system-metrics/setup.cfg
@@ -39,13 +39,13 @@ package_dir=
     =src
 packages=find_namespace:
 install_requires =
-    opentelemetry-api == 0.18.dev0
-    opentelemetry-sdk == 0.18.dev0
+    opentelemetry-api == 1.10a0
+    opentelemetry-sdk == 1.10a0
     psutil ~= 5.7.0
 
 [options.extras_require]
 test =
-    opentelemetry-test == 0.18.dev0
+    opentelemetry-test == 0.19b0
 
 [options.packages.find]
 where = src
